fix: Fixed toasts not showing on right side tabs, b=(closes #8143), c=common

--- a/src/zen/common/styles/zen-popup.css
+++ b/src/zen/common/styles/zen-popup.css
@@ -350,6 +350,10 @@ menuitem {
   }
 
   & .zen-toast {
+    :root[zen-right-side='true'] & {
+      translate: 100%;
+    }
+
     padding: 10px;
     border-radius: 12px;
     background: linear-gradient(
